add splash screen and update directory watcher